# parallelpractice

./: .gitignore  README.md
cf/: Cargo.toml
cf/src/: 158A.rs  1686A.rs  1688B.rs  71A.rs  asdf.rs
cpp/src/: CMakeLists.txt  app.cxx  tutorial.cxx
cpp/src/alphabetlib/: util.cxx
rustblas/: Cargo.toml  asdf.py  plan.md
rustblas/src/: arr.rs  arr1d.rs  arr2d.rs  arr3d.rs  asserts.rs  lib.rs  main.rs
