[package]
name = "rustblas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustblas"
path = "src/lib.rs"

[[bin]]
name = "rustblas"
path = "src/main.rs"

[dependencies]
num = "0.4.0"
anyhow = "1.0.58"